Fix render.yaml format - remove inline comments and buildArgs

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 # Render.com Infrastructure as Code
 # Deploy: Connect repo to Render and it will auto-detect this file
-#
 # Note: Persistent disk requires a paid plan ($7/mo minimum for Starter)
-# Without disk, uploaded files will be lost on redeploy
-# For production, upgrade backend plan to 'starter' or higher
 
 databases:
   - name: irb-forms-db
@@ -11,22 +8,20 @@ databases:
     user: irb_forms_user
     region: oregon
     plan: free
-    ipAllowList: []
 
 services:
-  # Backend API (FastAPI)
   - type: web
     name: irb-forms-backend
     runtime: docker
     region: oregon
-    plan: starter  # Required for persistent disk (change to 'free' to test without disk)
+    plan: starter
     dockerfilePath: ./backend/Dockerfile.prod
     dockerContext: ./backend
     healthCheckPath: /health
     disk:
       name: irb-storage
       mountPath: /app/storage
-      sizeGB: 1  # Remove disk section if using free plan
+      sizeGB: 1
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -43,7 +38,6 @@ services:
       - key: LIBREOFFICE_PATH
         value: /usr/bin/libreoffice
 
-  # Frontend (React/Vite with Nginx)
   - type: web
     name: irb-forms-frontend
     runtime: docker
@@ -51,9 +45,6 @@ services:
     plan: free
     dockerfilePath: ./frontend/Dockerfile.prod
     dockerContext: ./frontend
-    buildArgs:
-      - key: VITE_API_URL
-        value: https://irb-forms-backend.onrender.com/api
     envVars:
       - key: VITE_API_URL
         value: https://irb-forms-backend.onrender.com/api
