--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,15 +4,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Handle SPA routing - serve index.html for all routes
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
