--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -26,6 +26,9 @@ RUN mkdir -p /app/storage/uploads /app/storage/generated /app/storage/templates 
 # Copy application code
 COPY --chown=appuser:appuser . .
 
+# Make start script executable
+RUN chmod +x start.sh
+
 USER appuser
 
 EXPOSE 8000
@@ -34,4 +37,4 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"
 
-CMD ["gunicorn", "app.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000"]
+CMD ["./start.sh"]
